--- a/known_devices.yaml
+++ b/known_devices.yaml
@@ -52,3 +52,39 @@ androidab396bef8f2c2f98home:
   picture:
   track: true
   vendor: unknown
+
+ipaddeeduardofhome:
+  hide_if_away: false
+  icon:
+  mac: 34:12:98:49:A6:90
+  name: ipaddeeduardof.home
+  picture:
+  track: true
+  vendor: Apple, Inc.
+
+galaxys6home:
+  hide_if_away: false
+  icon:
+  mac: E8:50:8B:73:0E:85
+  name: galaxy-s6.home
+  picture:
+  track: true
+  vendor: SAMSUNG ELECTRO-MECHANICS(THAILAND)
+
+mbpdeeduardohome:
+  hide_if_away: false
+  icon:
+  mac: 6C:40:08:B4:83:4C
+  name: mbp-de-eduardo.home
+  picture:
+  track: true
+  vendor: Apple, Inc.
+
+'1921681134':
+  hide_if_away: false
+  icon:
+  mac: 68:A8:6D:06:07:AE
+  name: 192.168.1.134
+  picture:
+  track: true
+  vendor: Apple, Inc.
